--- a/maquetacion/index.html
+++ b/maquetacion/index.html
@@ -4,35 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <link rel="stylesheet" href="public/css/estilos.css" type="text/css">
     <title>Xacademy Clase 1 maquetacion</title>
-    <style>
-        body {
-            margin: 0;
-        }
-        p {
-            margin-right: 40px;
-        }
-        h1 {
-            margin: 0px 400px;
-            text-align: center;
-        }
-        button.redondo {
-            background-color: white;
-            border: 1px solid black;
-            border-radius: 25px;
-            padding: 0px 20px;
-            height: 32px;
-        }
-        div#introduction-actions {
-            display: flex;
-            justify-content: center;
-        }
-    </style>
+
 </head>
 <body>
     <div id="header" style="border-bottom: 1px solid gray; display: flex; padding: 10px 100px; justify-content: space-between">
         <div id="header-left">
-            <img src="logo.svg">
+            <img src="public/images/logo.svg">
         </div>
         <div id="header-right" style="display: flex; align-items: center;">
             <p>Nosotros</p>
@@ -43,6 +23,10 @@
             <button class="redondo">Sumate +</button>
         </div>
     </div>
+
+
+
+
     <div id="introduction" style="padding: 48px;">
         <div id="introduction-text">
             <h1>Somos una Fundación dedicada a mejorar la calidad de vida de las personas y su entorno, a través de la tecnología.</h1>
@@ -52,5 +36,89 @@
             <button class="redondo" style="margin-left: 14px;">Sumate +</button>
         </div>
     </div>
+
+
+
+    <div id="impacto" class="full-screen" >
+        <div id="impacto-centro" class="row letra-blanca">
+            <div id="impacto-centro-columna1" class="col-2">
+            </div>
+            <div id="impacto-centro-columna2" class="col-4">
+                <div id="impacto-columna2-h2">
+                    <h2>. Impacto</h2>
+                </div>
+                <div id="impacto-columna2-p">
+                    <p>Buscamos construir alianzas y fortalecer vínculos para generar una transformación real en la comunidad. Trabajamos para acercar la tecnología innovadora y disruptiva del sector privado hacia el sector social.</p>
+                </div>
+            </div>
+
+            <div id="impacto-centro-columna3" class="col-4">
+                <div id="impacto-centro-columna3-1">
+                    <div id="impacto-centro-columna3-2">
+
+                        <div class="impacto-centro-columna3-3">
+                            <div class="impacto-centro-columna3-4">
+                                <div class="impacto-columna3-span"> <span class="impacto-columna3-span-1">58</span> </div>
+                                <div class="impacto-columna3-div">Localidades</div>
+                            </div>
+                        </div>
+
+                        <div class="impacto-centro-columna3-3">
+                            <div class="impacto-centro-columna3-4">
+                                <div class="impacto-columna3-span"> <span class="impacto-columna3-span-2">+</span><span class="impacto-columna3-span-1">50</span> </div>
+                                <div class="impacto-columna3-div">Mentores</div>
+                            </div>
+                        </div>
+
+                        <div class="impacto-centro-columna3-3">
+                            <div class="impacto-centro-columna3-4">
+                                <div class="impacto-columna3-span"> <span class="impacto-columna3-span-1">301</span> </div>
+                                <div class="impacto-columna3-div">Participantes</div>
+                            </div>
+                        </div>
+        
+                    </div>
+                </div>        
+            </div>
+
+            <div id="impacto-centro-columna4" class="col-2">
+            </div>
+        </div>
+    </div>
+
+
+    <div id="imagen" class="full-screen" >
+    </div>
+
+    <div id="programas" class="full-screen" >
+        <div id="programas-div1">
+            <div id="programas-div2">
+                <div id="programas-div3">
+                    <div id="programas-div4">
+                        <h2 id="programas-div4-h2">.Programas</h2>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="container">
+        <div class="row">
+            <div class="col" style="background-color: chartreuse;">HOLA</div>
+            <div class="col" style="background-color: aqua;">MUNDO</div>
+            <div class="col" style="background-color: lightcoral;">COMO</div>
+            <div class="col" style="background-color: rebeccapurple;">ESTAS</div>
+        </div>
+
+    </div>
+
+    <footer></footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
+
 </body>
+
+
+
+
 </html>
