--- a/maquetacion/index.html
+++ b/maquetacion/index.html
@@ -10,6 +10,7 @@
 
 </head>
 <body>
+    <!--SECCION MENU-->
     <div id="header" style="border-bottom: 1px solid gray; display: flex; padding: 10px 100px; justify-content: space-between">
         <div id="header-left">
             <img src="public/images/logo.svg">
@@ -25,8 +26,7 @@
     </div>
 
 
-
-
+    <!--SECCION INTRODUCCION-->
     <div id="introduction" style="padding: 48px;">
         <div id="introduction-text">
             <h1>Somos una Fundación dedicada a mejorar la calidad de vida de las personas y su entorno, a través de la tecnología.</h1>
@@ -38,7 +38,7 @@
     </div>
 
 
-
+    <!--SECCION IMPACTO-->
     <div id="impacto" class="full-screen" >
         <div id="impacto-centro" class="row letra-blanca">
             <div id="impacto-centro-columna1" class="col-2">
@@ -87,11 +87,14 @@
     </div>
 
 
+    <!--SECCION IMAGEN-->
     <div id="imagen" class="full-screen" >
     </div>
 
+
+    <!--SECCION PROGRAMAS-->
     <div id="programas" class="full-screen" >
-        <div id="programas-div1">
+        <div id="programas-div1" class="programas-div1">
             <div id="programas-div2">
                 <div id="programas-div3">
                     <div id="programas-div4">
@@ -101,6 +104,93 @@
             </div>
         </div>
     </div>
+
+    <div id="programas1" class="full-screen programas-div2" >
+        <div id="programas1-div1">
+            
+            <div class="programas1-div2">
+                <div class="programas1-div2-img">
+                    <div style="box-sizing: border-box; display: block;">
+                        <span id="programas1-div2-img-span">
+                            <img decoding="async" width="1920" height="1280" title="xAcademy" 
+                            src="public/images/xacademy-01.jpg" 
+                            alt class="img-responsive" id="programas1-div2-img-span-img">
+                        </span>
+                    </div>
+                </div>
+            </div>
+
+            <div class="programas1-div2">
+                <div class="programas1-div2-text">
+                    <div id="programas1-div2-text-title">
+                        <span id="programas1-div2-text-title-span">
+                            <img decoding="async" width="360" height="77" title="xAcademy"  
+                            src="public/images/xacademy.svg" 
+                            alt class="img-responsive" id="programas1-div2-text-title-span-img">
+                        </span>
+                    </div>
+                    <div class="programas1-div2-text-p">
+                        <p class="programas1-div2-text-p-1">xAcademy es un programa de formación en 
+                                                        tecnología llevado adelante por la Fundación 
+                                                        Tecnología con Propósito junto a Santex que 
+                                                        busca promover un cambio positivo en la 
+                                                        comunidad a través de la educación en IT, 
+                                                        apuntando a lograr la inserción laboral de 
+                                                        personas en el mundo tecnológico.</p>
+                    </div>
+                    <div class="programas1-div2-text-a">
+                        <button class="redondo">Más info -></button>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+    </div>
+
+    <div id="programas2" class="full-screen programas-div1">
+        <div id="programas1-div1">
+            
+            <div class="programas1-div2">
+                <div class="programas1-div2-text">
+                    <div id="programas1-div2-text-title2">
+                        <h4 id="programas1-div2-text-title-h4">Robótica educativa: la tegnología
+                                                                del futuro
+                        </h4>
+                    </div>
+                    <div class="programas1-div2-text-p">
+                        <p class="programas1-div2-text-p-1">xAcademy es un programa de formación en 
+                                                        tecnología llevado adelante por la Fundación 
+                                                        Tecnología con Propósito junto a Santex que 
+                                                        busca promover un cambio positivo en la 
+                                                        comunidad a través de la educación en IT, 
+                                                        apuntando a lograr la inserción laboral de 
+                                                        personas en el mundo tecnológico.</p>
+                    </div>
+                    <div class="programas1-div2-text-a">
+                        <button class="redondo">Más info -></button>
+                    </div>
+                </div>
+            </div>
+
+            <div class="programas1-div2">
+                <div class="programas1-div2-img">
+                    <div style="box-sizing: border-box; display: block;">
+                        <span id="programas1-div2-img-span2">
+                            <img decoding="async" width="1920" height="1280" title="xAcademy" 
+                            src="public/images/robotica-educativa-07.jpg" 
+                            alt class="img-responsive" id="programas1-div2-img-span2-img2">
+                        </span>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+    </div>
+
+
+
+
+
 
     <div class="container">
         <div class="row">
@@ -114,7 +204,7 @@
 
     <footer></footer>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
+    <!--<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>-->
 
 </body>
 
